force-app/main/default/objects/Adopter_or_Foster__c/Adopter_or_Foster__c.object-meta.xml
<CustomObject>
    <label>Adopter or Foster</label>
    <nameField>
        <label>Pet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adopters or Fosters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>