force-app/main/default/objects/Adopter_or_Foster__c/fields/Adopter_Foster_Name__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Foster_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Adopter/Foster Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Adoption/Foster Pets</relationshipLabel>
    <relationshipName>Adopters_or_Fosters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>