force-app/main/default/objects/Adopter_or_Foster__c/fields/Adoption_Foster_Date__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Foster_Date__c</fullName>
    <label>Adoption/Foster Date</label>
    <type>Date</type>
</CustomField>