force-app/main/default/objects/Adopter_or_Foster__c/fields/Adoption_Foster_Type__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Foster_Type__c</fullName>
    <label>Adoption/Foster Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cat</fullName>
                <label>Cat Adopted</label>
            </value>
            <value>
                <fullName>Cat Adopter</fullName>
                <isActive>false</isActive>
                <label>Cat Adopter</label>
            </value>
            <value>
                <fullName>Cat Adopter - PACCA</fullName>
            </value>
            <value>
                <fullName>Cat Foster</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
                <label>Dog Adopted</label>
            </value>
            <value>
                <fullName>Dog Adopter</fullName>
                <isActive>false</isActive>
                <label>Dog Adopter</label>
            </value>
            <value>
                <fullName>Dog Adopter - PACCA</fullName>
            </value>
            <value>
                <fullName>Dog Foster</fullName>
            </value>
            <value>
                <fullName>Foster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>