force-app/main/default/objects/Adopter_or_Foster__c/fields/Animal_ID__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID__c</fullName>
    <label>Animal ID #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>