force-app/main/default/objects/Adopter_or_Foster__c/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has this pet past away?</inlineHelpText>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>