force-app/main/default/objects/Adopter_or_Foster__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household/Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adoptions/Fostering</relationshipLabel>
    <relationshipName>Adopters_or_Fosters</relationshipName>
    <type>Lookup</type>
</CustomField>