force-app/main/default/objects/Adopter_or_Foster__c/fields/NEON_ID__c.field-meta.xml
<CustomField>
    <fullName>NEON_ID__c</fullName>
    <externalId>true</externalId>
    <label>NEON ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>