force-app/main/default/objects/Adopter_or_Foster__c/fields/Returned_Adopter__c.field-meta.xml
<CustomField>
    <fullName>Returned_Adopter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returned Adopter</label>
    <type>Checkbox</type>
</CustomField>