force-app/main/default/objects/Adopter_or_Foster__c/fields/Shelterluv_Pet_Link__c.field-meta.xml
<CustomField>
    <fullName>Shelterluv_Pet_Link__c</fullName>
    <label>Shelterluv Pet Link</label>
    <type>Url</type>
</CustomField>