force-app/main/default/objects/Adopter_or_Foster__c/recordTypes/Adoption_Foster.recordType-meta.xml
<RecordType>
    <fullName>Adoption_Foster</fullName>
    <active>true</active>
    <label>Adoption/Foster</label>
</RecordType>