force-app/main/default/objects/Adopter_or_Foster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Adopter_Foster_Name__c</columns>
    <columns>Animal_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Adoption_Foster_Date__c</columns>
    <columns>Adoption_Foster_Type__c</columns>
    <columns>Shelterluv_Pet_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>