force-app/main/default/objects/Adopter_or_Foster__c/listViews/all_adopters.listView-meta.xml
<ListView>
    <fullName>all_adopters</fullName>
    <columns>Adoption_Foster_Type__c</columns>
    <columns>Adopter_Foster_Name__c</columns>
    <columns>Adoption_Foster_Date__c</columns>
    <columns>Animal_ID__c</columns>
    <columns>Household__c</columns>
    <columns>Returned_Adopter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Adoption_Foster_Type__c</field>
        <operation>equals</operation>
        <value>Cat Adopter,Cat Adopter - PACCA,Dog Adopter,Dog Adopter - PACCA</value>
    </filters>
    <label>All Adopters - no fosters</label>
</ListView>